--- a/P_Total/Campagne TPI/Module de gestion/Destinataires Rapport/Gestion - html - Alert Destinataires.html
+++ b/P_Total/Campagne TPI/Module de gestion/Destinataires Rapport/Gestion - html - Alert Destinataires.html
@@ -1,4 +1,4 @@
-<!-- Info Email destinataires -->
+<!-- Info destinataires -->
 <div class="alert alert-danger col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	<div class="row no-margin">
 		<i class="fa fa-info-circle fa-lg" aria-hidden="true"></i>&nbsp; Les adresses emails correspondent aux destinataires qui recevront les <strong>rapports PDF</strong><br>
