--- a/P_Vivarte/Dashboard/DBP html - select_box-v6.html
+++ b/P_Vivarte/Dashboard/DBP html - select_box-v6.html
@@ -1,3 +1,4 @@
+	<!-- Selection filters -->
 	<div id="id_profileRow" class="row margin-bottom-10px">
 		<div class="col-md-4 col-sm-4">
 			<div class="input-group" data-toggle="tooltip" data-placement="top" title="Compagnie">
