--- a/P_Vivarte/NWOP/NWOP html - Contact.html
+++ b/P_Vivarte/NWOP/NWOP html - Contact.html
@@ -2,7 +2,7 @@
 <div class="container bkg-light-blue">
 	<div class="row margin-top-bottom-10px">
 	</div>
-	<div id="id_rowContatDetails" class="row">
+	<div id="id_rowContactDetails" class="row">
 		<div class="col-md-3 col-sm-3">
 			<div class="input-group" data-toggle="tooltip" data-placement="top" title="Email Contact">
 			  <span class="input-group-addon">
