--- a/P_KellyDeli/NWOP/NWOP html - decision_tree.html
+++ b/P_KellyDeli/NWOP/NWOP html - decision_tree.html
@@ -1,13 +1,13 @@
 <!-- HTML Choices Menu row -->
 <div class="container text-center">
   <div class="row row-centered">
-		<h3 align="text-left">${i18n('id_votre_demande','Votre demande concerne :')}</h3>
+		<h3 align="text-left">${i18n("id_votre_demande", "Votre demande concerne :")}</h3>
   </div>
   <div class="row row-centered">
     <div id="label" class="col-md-2 col-sm-4 col-xs-6">
       <div class="well col-centered pointer">
         <div class="homeThumbnail">
-          <span class="homeTitle">${i18n('text_id1', 'Une Etiquette')}</span>
+          <span class="homeTitle">${i18n("text_id1", "Une étiquette")}</span>
         </div>
         <br>
           <i class="homeImage">
@@ -18,7 +18,7 @@
 	<div id="printer" class="col-md-2 col-sm-4 col-xs-6">
       <div class="well col-centered pointer">
         <div class="homeThumbnail">
-          <span class="homeTitle">${i18n('text_id2', 'L imprimante')}</span>
+          <span class="homeTitle">${i18n("text_id2", "Une imprimante")}</span>
         </div>
         <br>
           <i class="homeImage">
@@ -29,7 +29,7 @@
     <div id="scale" class="col-md-2 col-sm-4 col-xs-6">
       <div class="well col-centered pointer">
         <div class="homeThumbnail">
-          <span class="homeTitle">${i18n('text_id3', 'La balance')}</span>
+          <span class="homeTitle">${i18n("text_id3", "Une balance")}</span>
         </div>
         <br>
           <i class="homeImage">
@@ -40,7 +40,7 @@
     <div id="POPS" class="col-md-2 col-sm-4 col-xs-6">
       <div class="well col-centered pointer">
         <div class="homeThumbnail">
-          <span class="homeTitle">${i18n('text_id4', 'POPS')}</span>
+          <span class="homeTitle">${i18n("text_id4", "POPS")}</span>
         </div>
         <br>
           <i class="homeImage">
@@ -51,7 +51,7 @@
     <div id="screen" class="col-md-2 col-sm-4 col-xs-6">
       <div class="well col-centered pointer">
         <div class="homeThumbnail">
-          <span class="homeTitle">${i18n('text_id6','L écran')}</span>
+          <span class="homeTitle">${i18n("text_id5", "Un écran")}</span>
         </div>
         <br>
           <i class="homeImage">
