--- a/P_KellyDeli/Notations/Notations html - Satisfaction Part.html
+++ b/P_KellyDeli/Notations/Notations html - Satisfaction Part.html
@@ -17,9 +17,9 @@
                             <textarea id="id_comment" rows="3" class="form-control"></textarea>   
                         </div>
                     </div>
-                    <div id="id_divSendEval" class="text-right">
+                    <!-- <div id="id_divSendEval" class="text-right">
                         <a id="id_sendEval" href="#" class="btn btn-warning execute_script-Button width-200" onclick="sendEval();"><i class="fa fa-gratipay fa-lg" aria-hidden="true"></i>&nbsp; ${i18n("title_id5","Soumettre l'avis")}</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         <!-- </form> -->
