--- a/P_KellyDeli/Notations/Notations html - Ticket Details Part.html
+++ b/P_KellyDeli/Notations/Notations html - Ticket Details Part.html
@@ -11,7 +11,7 @@
     <div id="id_rowIdentification" class="row">
         <div class="col-md-4 col-sm-4 margin-bottom-10px">
             <!-- <div class="row"> -->
-                <div id="id_num_det_div" class="input-group" data-toggle="tooltip" data-placement="top" title="${i18n('tooltip_id1', 'N° Incident')}">
+                <div id="id_num_det_div" class="input-group" data-toggle="tooltip" data-placement="bottom" title="${i18n('tooltip_id1', 'N° Incident')}">
                     <span class="input-group-addon">
                     <i class="fa fa-hashtag" aria-hidden="true"></i>
                     </span>
@@ -36,7 +36,7 @@
         </div>
 
         <div class="col-md-4 col-sm-4 margin-bottom-10px">
-			<div id="id_open_det_div" class="input-group has-success" data-toggle="tooltip" data-placement="top" title="${i18n('tooltip_id4', 'Date Ouverture')}">
+			<div id="id_open_det_div" class="input-group has-success" data-toggle="tooltip" data-placement="bottom" title="${i18n('tooltip_id4', 'Date Ouverture')}">
                 <span class="input-group-addon">
                     <i class="fa fa-calendar" aria-hidden="true"></i>
                 </span>
@@ -93,4 +93,3 @@
 
     </div>
 </div>
-
