--- a/P_KellyDeli/ServiceDesk/SD Ecran/SD Ecran html - Question 4.html
+++ b/P_KellyDeli/ServiceDesk/SD Ecran/SD Ecran html - Question 4.html
@@ -1,11 +1,11 @@
-<!-- Question 1 displayed ? -->
+<!-- Question 4 displayed ? -->
 <div class="container-fluid margin-top-bottom-10px my-actions">		
 	<div id="id_level1Row" class="row">
 		<div class="row">
 			<div class="col-sm-8 col-md-6 col-lg-6">
 				<h4 class="title-form-2">
 					<i class="fa fa-question-circle fa-lg" aria-hidden="true"></i>
-					&nbsp;&nbsp;  ${i18n("id_message_1","L'écran tactile est indisponible ?")}
+					&nbsp;&nbsp; ${i18n("id_message_4","La multiprise est-elle alimentée par le courant ?")}
 				</h4>
 			</div>
 		</div>
