--- a/P_KellyDeli/Fermeture ticket/Close Ticket html - Info.html
+++ b/P_KellyDeli/Fermeture ticket/Close Ticket html - Info.html
@@ -1,6 +1,6 @@
 <div class="alert alert-danger pull-left" role="alert">
 	<strong>${i18n("alertInfo_txt1", "Note")} :</strong> 
 	<p>
-		<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>&nbsp; ${i18n("alertInfo_txt2", "Merci de ne pas utiliser de caractères spéciaux tels que les retours à la ligne, les slashs, anti-slashs (les accents sont autorisés).")}.
+		<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>&nbsp; ${i18n("alertInfo_txt2", "Please don't use special characters as carriage return, slash, backslash (accents are allowed).")}.
 	</p>
 </div>
