--- a/P_KellyDeli/HomePage/HomePage.html
+++ b/P_KellyDeli/HomePage/HomePage.html
@@ -1,7 +1,7 @@
 <div class="container text-center nav_img">
   <div class="row row-centered">
     <a href="https://live.runmyprocess.com/live/112501480325272109/appli/345849?P_mode=${P_mode}&P_language=${P_language}">
-      <div id="request" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('402267')=='true' || has_right('402314')=='true' || has_right('398372')=='true' || has_right('398369')=='true'}">
+      <div id="request" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('402267')=='true' || has_right('402314')=='true' || has_right('401915')=='true' || has_right('398372')=='true' || has_right('398369')=='true'}">
         <div class="well col-centered">
           <div class="homeThumbnail">
             <span class="homeTitle">${i18n('text_id1', 'Créer une demande')}</span>
@@ -39,7 +39,7 @@
         </div>
       </a>
     </div>
-    <div id="report" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('402267')=='false' && has_right('403277')=='false' && has_right('402314')=='false'}">
+    <div id="report" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('402267')=='false' && has_right('403277')=='false'}">
       <a href="https://live.runmyprocess.com/live/112501480325272109/appli/345850?P_mode=${P_mode}&P_language=${P_language}">
       <div class="well col-centered ">
         <div class="homeThumbnail">
@@ -78,7 +78,7 @@
         </div>
       </a>
     </div>
-    <div id="idea_box" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('403277')=='true' || has_right('398369')=='true'}">
+    <div id="idea_box" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('403277')=='true' || has_right('439766')=='true' || has_right('401915')=='true' || has_right('398369')=='true'}">
       <a href="https://live.runmyprocess.com/live/112501480325272109/appli/350158?P_mode=${P_mode}&P_language=${P_language}">
         <div class="well col-centered">
           <div class="homeThumbnail">
