--- a/P_KellyDeli/ServiceDesk/SD Ecran/SD Ecran html - Question 3.html
+++ b/P_KellyDeli/ServiceDesk/SD Ecran/SD Ecran html - Question 3.html
@@ -1,13 +1,13 @@
 <!-- Question 3 displayed ? -->
 <div class="container-fluid margin-top-bottom-10px my-actions">		
-    <div id="id_level3Row" class="row">
-        <div class="row">
-            <div class="col-sm-8 col-md-6 col-lg-6">
-                <h4 class="title-form-2">
-                    <i class="fa fa-question-circle fa-lg" aria-hidden="true"></i>
-                    &nbsp;&nbsp; ${i18n("id_message_3", "L'étiquette présente des défauts d’impression")}
-                </h4>
-            </div>
-        </div>
-    </div>
+	<div id="id_level1Row" class="row">
+		<div class="row">
+			<div class="col-sm-8 col-md-6 col-lg-6">
+				<h4 class="title-form-2">
+					<i class="fa fa-question-circle fa-lg" aria-hidden="true"></i>
+					&nbsp;&nbsp; ${i18n("id_message_3","Bizerba est-il bien branché ?")}
+				</h4>
+			</div>
+		</div>
+	</div>
 </div>
