--- a/P_KellyDeli/ServiceDesk/SD Imprimante/SD Imprimante html - Question 5.html
+++ b/P_KellyDeli/ServiceDesk/SD Imprimante/SD Imprimante html - Question 5.html
@@ -5,7 +5,7 @@
             <div class="col-sm-8 col-md-6 col-lg-6">
                 <h4 class="title-form-2">
                     <i class="fa fa-question-circle fa-lg" aria-hidden="true"></i>
-                    &nbsp;&nbsp; ${i18n("id_message5", "Je rencontre toujours des difficultés à imprimer?")}
+                    &nbsp;&nbsp; ${i18n("id_message5", "Je rencontre toujours des difficultés à imprimer")}
                 </h4>
             </div>
         </div>
