--- a/P_KellyDeli/WORP/WORP html - 4-details_request_status_flow.html
+++ b/P_KellyDeli/WORP/WORP html - 4-details_request_status_flow.html
@@ -20,7 +20,7 @@
             <span id="id_bar3" class="bar"></span>
             <div id="id_circle4" class="circle">
                 <span id="id_label4" class="label">4</span>
-                <span id="id_title4" class="title nowrap">${i18n('circle_id4', 'Planifié')}</span>
+                <span id="id_title4" class="title nowrap">${i18n('circle_id4', 'Planifiée')}</span>
             </div>
             <span id="id_bar4" class="bar"></span>
             <div id="id_circle5" class="circle">
