--- a/P_RmsDemo/AccountManagement/Account html - Modules Cards.html
+++ b/P_RmsDemo/AccountManagement/Account html - Modules Cards.html
@@ -232,6 +232,56 @@
             </div> <!-- end card-container -->
         </div>  <!-- end col-sm-6 col-md-4 col-lg-4 -->
 
+        <!-- Module Gestion des Langues -->
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="card-container">
+                <a href="https://live.runmyprocess.com/live/112501480325272109/appli/384417?P_mode=${P_mode}&P_language=${P_language}">
+                    <div class="card">
+                        <div class="front">
+                            <div class="cover">
+                                <img src="https://live.runmyprocess.com/live/112501480325272109/upload/de29db80-7316-11e8-a9fb-0639651b3341/fujitsu_bkg_06.jpg">
+                            </div>
+                            <div class="module">
+                                <img class="img-circle" src="https://live.runmyprocess.com/live/112501480325272109/upload/670a55a0-7318-11e8-b6b5-0619bd984419/languages_200.png">
+                            </div>
+                            <div class="content">
+                                <div class="main">
+                                    <h3 class="name">Langues</h3>
+                                    <p class="profession text-danger">réservé aux administrateurs</p>
+                                    <p class="text-center">Module de gestion des langues</p>
+                                </div>
+                                <div class="footer">
+                                    <i class="fa fa-mail-forward"></i>  Plus de précisions
+                                </div>
+                            </div>
+                        </div> <!-- end Front Face Card -->
+                        <div class="back">
+                            <div class="content">
+                                <div class="main">
+                                    <h4 class="title text-center">Gestion des langues</h4>
+                                    <p class="text-center">Ce module permet de gérer : 
+                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> Les mots-clés d'une langue
+                                        </li>
+                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> Les paramètres d'une langue
+                                        </li></p>
+                                        <div class="stats-container text-center">
+                                            <h5 class="text-center">>Détails de langues</h5>
+                                            <div class="text-center">
+                                                <div class="stats">
+                                                     <h4 id="id_languages_nb">10</h4>
+                                                    <p>Nombre</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                </div>
+                            </div>
+                            <!-- <div class="footer"></div> -->
+                        </div> <!-- end Back Face Card -->
+                    </div> <!-- end card -->
+                </a>
+            </div> <!-- end card-container -->
+        </div>  <!-- end col-sm-6 col-md-4 col-lg-4 -->
+
         <!-- Module ADMINISTRATION -->
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
             <div class="card-container">
