--- a/P_RmsDemo/MyTasks/MyTasks - TAB video.html
+++ b/P_RmsDemo/MyTasks/MyTasks - TAB video.html
@@ -1,4 +1,4 @@
-<!-- My actions - List of Video Assistance Request  -->
+<!-- My tasks - List of Video Assistance Request  -->
 <div class="container-fluid no-margin my-actions">		
 	<div id="id_videoAssistanceRequestRow" class="row">
 		<div class="row">
@@ -8,8 +8,8 @@
 		</div>
 		<div id="id_videoAssistanceAlert" class="row">
 			<div class="alert alert-warning pull-left" role="alert">
-				<strong>${i18n("alert_video_id1","Note")}:</strong> ${i18n("alert_video_id2", "Sont listées ici l'ensemble des demandes d'assistance vidéo exprimées par les clients.")}
-				<br><strong>${i18n("alert_video_id3", "RAPPEL")}:</strong> ${i18n("alert_video_id4", "Vous devez préalablement consulter le Work Order qui a été créé, et appeler l'utilisateur pour convenir d'une session d'assistance par vidéo.")}
+				<strong>${i18n("alert_video_id1","Note :")}</strong> ${i18n("alert_video_id2", "Sont listées ici l'ensemble des demandes d'assistance vidéo exprimées par les clients.")}
+				<br><strong>${i18n("alert_video_id3", "RAPPEL :")}</strong> ${i18n("alert_video_id4", "Vous devez préalablement consulter le Work Order qui a été créé, et appeler l'utilisateur pour convenir d'une session d'assistance par vidéo.")}
 			</div>
 		</div>
 	</div>
