--- a/P_KellyDeli/HomePage/HomePage.html
+++ b/P_KellyDeli/HomePage/HomePage.html
@@ -1,7 +1,7 @@
 <div class="container text-center nav_img">
   <div class="row row-centered">
     <a href="https://live.runmyprocess.com/live/112501480325272109/appli/345849?P_mode=${P_mode}&P_language=${P_language}">
-      <div id="request" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('402267')=='true' || has_right('402314')=='true' || has_right('401915')=='true' || has_right('398372')=='true' || has_right('398369')=='true'}">
+      <div id="request" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('402267')=='true' || has_right('402314')=='true' || has_right('439766')=='true' || has_right('401915')=='true' || has_right('398372')=='true' || has_right('398369')=='true'}">
         <div class="well col-centered">
           <div class="homeThumbnail">
             <span class="homeTitle">${i18n('text_id1', 'Créer une demande')}</span>
