--- a/P_RmsDemo/VideoAssistanceRequest/VideoAssistanceRequest html - Header.html
+++ b/P_RmsDemo/VideoAssistanceRequest/VideoAssistanceRequest html - Header.html
@@ -1,11 +1,8 @@
-<!-- Titre page: Video Assistance Request  -->
-<div class="row heading-row">
-	<div class = "panel panel-primary">
+<!-- Titre page: Video Assistance Session  -->
+<div class="heading-row">
+	<div class = "panel panel-primary no-margin">
 		<div class = "panel-heading">
-		<h1 class = "panel-title"><i class="fa fa-eye fa-lg" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n('panel_title_id1', 'Demande Assistance Vidéo')}</h1>
+		<h1 class = "panel-title"><i class="fa fa-eye fa-lg" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n("panel_title_id2", "Ouverture Session d'assistance via Camera")}</h1>
 		</div>
-	</div>
-	<div class="alert alert-warning pull-left" role="alert">
-		<strong>Note :</strong> Vous allez établir une demande d'assistance par vidéo.<br>Le support IT va être notifié de votre demande et vous rappelera pour convenir d'un rendez-vous afin d'établir une liaison par vidéo.
 	</div>
 </div>
