--- a/P_KellyDeli/BO Users/BO Users html - Alert CW.html
+++ b/P_KellyDeli/BO Users/BO Users html - Alert CW.html
@@ -3,6 +3,6 @@
 <div class="alert alert-danger pull-left" role="alert">
 	<strong>${i18n("alertInfo_txt1", "NOTE")}</strong>&nbsp; ${i18n("alertInfo_txt2", "(pour Liste Kiosks)")}
 	<p>
-        <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>&nbsp; ${i18n("alertInfo_txt3", "Utiliser uniquement des MAJUSCULES, tirets et chiffres. Séparer les kiosks pas une virgule. PAS D'ESPACE !")}<br>
+        <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>&nbsp; ${i18n("alertInfo_txt3", "Utiliser uniquement des MAJUSCULES, tirets et chiffres. Séparer les kiosks pas une <strong>VIRGULE</strong>. PAS D'ESPACE !")}<br>
 	</p>
 </div>
