link of the pdf updated

--- a/P_KellyDeli/Tutoriels/Tutoriels html - main.html
+++ b/P_KellyDeli/Tutoriels/Tutoriels html - main.html
@@ -3,7 +3,7 @@
 <div class="row">
     <div class = "panel panel-primary">
       <div class = "panel-heading">
-        <h1 class = "panel-title"><i class="fa fa-file-video-o fa-lg" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n("id_titre2","Consultation de tutoriels vidéo")}</h1>
+        <h1 class = "panel-title"><i class="fa fa-file-video-o fa-lg" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n("id_titre2","Tutoriels vidéo")}</h1>
       </div>
     </div>
 </div>
@@ -18,7 +18,9 @@
 </div> -->
 <!-- Lien vidéo -->
 <div class="row">
-    <a href="https://drive.google.com/file/d/0B-89zqVI1KSAd1o0b1NuMnNhb0E/preview" target="_blank"> <i class="fa fa-play fa-lg"></i>&nbsp;&nbsp;FR - ${i18n("id_video1","Comment changer le rouleau de papier")}</a> 
+    <a href="https://drive.google.com/file/d/0B-89zqVI1KSAd1o0b1NuMnNhb0E/preview" target="_blank"> <i class="fa fa-video-camera fa-lg"></i>&nbsp;&nbsp;FR - ${i18n("id_video1","Comment changer le rouleau de papier")}</a>
+    <br>
+    <br>
 </div>
 
 <!-- Titre rubrique: Consultation des guides d'utilisation -->
@@ -28,7 +30,7 @@
 <div class="row">
     <div class = "panel panel-primary">
       <div class = "panel-heading">
-        <h1 class = "panel-title"><i class="fa fa-leanpub fa-lg" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n("id_titre","Consultation des guides d'utilisation")}</h1>
+        <h1 class = "panel-title"><i class="fa fa-leanpub fa-lg" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n("id_titre","Guides d'utilisation")}</h1>
       </div>
     </div>
 </div>
