--- a/P_Vivarte/HomePage/HomePage.html
+++ b/P_Vivarte/HomePage/HomePage.html
@@ -91,7 +91,7 @@
         </div>
       </a>
     </div>
-    <div id="warehouse" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('408485')=='false' && has_right('392101')=='false' && has_right('384675')=='false' && has_right('396042')=='false' && has_right('405109')=='false'}">
+    <div id="warehouse" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('380783')=='true'}">
       <a href="https://live.runmyprocess.com/live/112501480325272109/appli/332420?P_mode=${P_mode}">
         <div class="well col-centered">
           <div class="homeThumbnail">
