--- a/P_KellyDeli/HomePage/HomePage.html
+++ b/P_KellyDeli/HomePage/HomePage.html
@@ -13,7 +13,7 @@
         </div>
       </a>
     </div>
-    <div id="trackingRequest" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('403277')=='false'}">
+    <div id="trackingRequest" class="col-md-2 col-sm-4 col-xs-6">
       <a href="https://live.runmyprocess.com/live/112501480325272109/appli/345851?P_mode=${P_mode}&P_language=${P_language}">
         <div class="well col-centered">
           <div class="homeThumbnail">
