--- a/P_RmsDemo/ServiceDesk/Main Page/ServiceDesk html - Decision_tree.html
+++ b/P_RmsDemo/ServiceDesk/Main Page/ServiceDesk html - Decision_tree.html
@@ -36,7 +36,18 @@
               <img class="homeIcon img-thumbnail" src="https://live.runmyprocess.com/live/112501480325272109/upload/d292d110-25cd-11e7-8331-0639651b3341/imprimante-ticket.png" onClick="javascript:load_next_screen(354570);"/>
           </i>
       </div>
-    </div> 
+    </div>
+    <div id="POPS" class="col-md-2 col-sm-4 col-xs-6">
+      <div class="well col-centered pointer">
+        <div class="homeThumbnail">
+          <span class="homeTitle">${i18n("text_pops", "POPS")}</span>
+        </div>
+        <br>
+          <i class="homeImage">
+             <img class="homeIcon img-thumbnail" src="https://live.runmyprocess.com/live/112501480325272109/upload/40612cc0-30df-11e7-86d1-02b3a23437c9/POPS.png" onClick="javascript:load_next_screen(346812);"/>
+          </i>
+      </div>
+    </div>  
     <div id="handScanner" class="col-md-2 col-sm-4 col-xs-6 hidden">
       <div class="well col-centered pointer">
         <div class="homeThumbnail">
