--- a/P_Legrand/CR Intervention/Homepage/HomePage.html
+++ b/P_Legrand/CR Intervention/Homepage/HomePage.html
@@ -3,7 +3,7 @@
     <div class="row row-centered">
 
         <!-- New intervention module-->
-        <div id="id_newIntervention" class="col-md-2 col-sm-4 col-xs-6">
+        <div id="id_newIntervention" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('452695')=='true' || has_right('452558')=='true'}">
             <a href="https://live.runmyprocess.com/live/112501480325272109/appli/395486?P_mode=${P_mode}&P_language=${P_language}">
                 <div class="well col-centered">
                     <div class="homeThumbnail">
@@ -18,7 +18,7 @@
         </div>
 
         <!-- My Tasks module-->
-        <div id="id_myTasks" class="col-md-2 col-sm-4 col-xs-6">
+        <div id="id_myTasks" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('452637')=='false' && has_right('452638')=='false'}">
             <a href="https://live.runmyprocess.com/live/112501480325272109/appli/395486?P_mode=${P_mode}&P_language=${P_language}">
                 <div class="well col-centered">
                     <div class="homeThumbnail">
@@ -33,7 +33,7 @@
         </div>
 
         <!-- Dashboard module -->
-        <div id="id_dashboard" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('452637')=='false' && has_right('452593')=='false'}">
+        <div id="id_dashboard" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('452637')=='false' && has_right('452638')=='false' && has_right('452593')=='false'}">
             <a href="https://live.runmyprocess.com/live/112501480325272109/appli/XXXXXX?P_mode=${P_mode}&P_language=${P_language}">
                 <div class="well col-centered ">
                 <div class="homeThumbnail">
@@ -48,7 +48,7 @@
         </div>
 
         <!-- Account Management module -->
-        <div id="id_accountManagement" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('452695')=='true' || has_right('408343')=='452558'}">
+        <div id="id_accountManagement" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('452695')=='true' || ${has_right('453117')=='true' || has_right('452558')=='true'}">
             <a href="https://live.runmyprocess.com/live/112501480325272109/appli/356701?P_mode=${P_mode}&P_language=${P_language}">
                 <div class="well col-centered">
                     <div class="homeThumbnail">
