--- a/P_Legrand/CR Intervention/Homepage/HomePage.html
+++ b/P_Legrand/CR Intervention/Homepage/HomePage.html
@@ -19,7 +19,7 @@
 
         <!-- My Tasks module-->
         <div id="id_myTasks" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('452637')=='false' && has_right('452638')=='false'}">
-            <a href="https://live.runmyprocess.com/live/112501480325272109/appli/395486?P_mode=${P_mode}&P_language=${P_language}">
+            <a href="https://live.runmyprocess.com/live/112501480325272109/appli/396333?P_mode=${P_mode}&P_language=${P_language}">
                 <div class="well col-centered">
                     <div class="homeThumbnail">
                         <span class="homeTitle">${i18n('text_myTasks', 'My tasks')}</span>
@@ -48,7 +48,7 @@
         </div>
 
         <!-- Account Management module -->
-        <div id="id_accountManagement" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('452695')=='true' || ${has_right('453117')=='true' || has_right('452558')=='true'}">
+        <div id="id_accountManagement" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('452695')=='true' || has_right('453117')=='true' || has_right('452558')=='true'}">
             <a href="https://live.runmyprocess.com/live/112501480325272109/appli/356701?P_mode=${P_mode}&P_language=${P_language}">
                 <div class="well col-centered">
                     <div class="homeThumbnail">
