--- a/P_Legrand/CR Intervention/My tasks/3_MyTasks - TAB Country Desk.html
+++ b/P_Legrand/CR Intervention/My tasks/3_MyTasks - TAB Country Desk.html
@@ -7,7 +7,7 @@
                     <h4 class="title-form-1"><i class="fa fa-check-square" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n("country_text", "Request Orders from GDC")}</h4>
                 </div>
             </div>
-            <div id="id_imacSDMOAlert" class="row">
+            <div id="id_countryAlert" class="row">
                 <div class="alert alert-warning pull-left" role="alert">
                     <strong>${i18n("alert_country_id1", "Note :")}</strong> ${i18n("alert_country_id2", "As a country user, you can access to all requests related to your country.")} 
                     <br><strong>${i18n("alert_country_id3", "REMINDER :")}</strong> ${i18n("alert_country_id4", "Once you fulfill the needed information to complete the form. By submitting the form, you plan an intervention with an engineer, who will be the next actor.")}
