--- a/P_Legrand/CR Intervention/New intervention/New intervention html - Issue.html
+++ b/P_Legrand/CR Intervention/New intervention/New intervention html - Issue.html
@@ -1,8 +1,22 @@
 <!-- Issue information -->
-<div class="row no-margin">
-  <div class = "panel panel-primary">
-    <div class = "panel-heading">
-      <h1 class = "panel-title"><i class="fa fa-exclamation-triangle fa-lg" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n('panel_title_issue_id', 'Issue information')}</h1>
-    </div>
-  </div>
+<div class="container-fluid">
+	<div class="row text-center">
+  		<div class = "panel panel-primary" style="margin-bottom:0px">
+    			<div class = "panel-heading">
+    				<table width="100%">
+                        <tr>
+                            <td width="100%" style="text-align: center;color: white">
+                                <h1 class = "panel-title"><i class="fa fa-exclamation-triangle fa-lg" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n('panel_title_issue_id', 'Issue information - Country Desk ')}</h1>
+                            </td>
+                            <td style="text-align: right">
+                                    <button id="bt_wo_back_global" onclick="javascript:fil_ariane('global');" type="button" class="gwt-Button rmpButton " style="direction: ltr;">${i18n('buttom_back', 'Go to global')}</button>
+                                </td>
+                            <td style="text-align: right">
+                                <button id="bt_wo_back_intervention" onclick="javascript:fil_ariane('intervention');" type="button" class="gwt-Button rmpButton " style="direction: ltr;">${i18n('buttom_back', 'Go to intervention')}</button>
+                            </td>
+                        </tr>
+                    </table>
+    			</div>
+		</div>
+	</div>
 </div>
