--- a/P_Legrand/CR Intervention/New intervention/New intervention html - Intervention.html
+++ b/P_Legrand/CR Intervention/New intervention/New intervention html - Intervention.html
@@ -6,14 +6,14 @@
     			<div class = "panel-heading">
     				<table width="100%">
                         <tr>
-                            <td width="100%" style="text-align: center;color: white">
+                            <td width="100%" style="text-align: center">
                                 <h1 class = "panel-title"><i class="fa fa-info-circle fa-lg" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n('panel_title_global_id', 'Global Informations - GDC')}</h1>
                             </td>
                             <td style="text-align: right">
-                                    <button id="bt_wo_back_global" onclick="javascript:fil_ariane('global');" type="button" class="gwt-Button rmpButton " style="direction: ltr;">${i18n('buttom_back', 'Go to Global')}</button>
+                                    <button id="bt_intervention_to_global" onclick="javascript:fil_ariane('global');" type="button" class="gwt-Button rmpButton " style="direction: ltr;">${i18n('buttom_back', 'Go to Global')}</button>
                                 </td>
                             <td style="text-align: right">
-                                <button id="bt_wo_back_issue" onclick="javascript:fil_ariane('issue');" type="button" class="gwt-Button rmpButton " style="direction: ltr;">${i18n('buttom_back', 'Go to issue')}</button>
+                                <button id="bt_intervention_to_issue" onclick="javascript:fil_ariane('issue');" type="button" class="gwt-Button rmpButton " style="direction: ltr;">${i18n('buttom_back', 'Go to issue')}</button>
                             </td>>
                         </tr>
                     </table>
