--- a/P_Legrand/CR Intervention/New intervention/New intervention html - Issue.html
+++ b/P_Legrand/CR Intervention/New intervention/New intervention html - Issue.html
@@ -5,14 +5,14 @@
     			<div class = "panel-heading">
     				<table width="100%">
                         <tr>
-                            <td width="100%" style="text-align: center;color: white">
+                            <td width="100%" style="text-align: center">
                                 <h1 class = "panel-title"><i class="fa fa-exclamation-triangle fa-lg" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n('panel_title_issue_id', 'Issue information - Country Desk ')}</h1>
                             </td>
                             <td style="text-align: right">
-                                    <button id="bt_wo_back_global" onclick="javascript:fil_ariane('global');" type="button" class="gwt-Button rmpButton " style="direction: ltr;">${i18n('buttom_back', 'Go to global')}</button>
+                                    <button id="bt_issue_to_global" onclick="javascript:fil_ariane('global');" type="button" class="gwt-Button rmpButton " style="direction: ltr;">${i18n('buttom_back', 'Go to global')}</button>
                                 </td>
                             <td style="text-align: right">
-                                <button id="bt_wo_back_intervention" onclick="javascript:fil_ariane('intervention');" type="button" class="gwt-Button rmpButton " style="direction: ltr;">${i18n('buttom_back', 'Go to intervention')}</button>
+                                <button id="bt_issue_to_intervention" onclick="javascript:fil_ariane('intervention');" type="button" class="gwt-Button rmpButton " style="direction: ltr;">${i18n('buttom_back', 'Go to intervention')}</button>
                             </td>
                         </tr>
                     </table>
