--- a/P_Legrand/CR Intervention/Homepage/HomePage.html
+++ b/P_Legrand/CR Intervention/Homepage/HomePage.html
@@ -18,7 +18,7 @@
         </div>
 
         <!-- My Tasks module-->
-        <div id="id_myTasks" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('452637')=='false' && has_right('452638')=='false'}">
+        <div id="id_myTasks" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('452637')=='false' && has_right('453483')=='false'}">
             <a href="https://live.runmyprocess.com/live/112501480325272109/appli/396333?P_mode=${P_mode}&P_language=${P_language}">
                 <div class="well col-centered">
                     <div class="homeThumbnail">
@@ -33,7 +33,7 @@
         </div>
 
         <!-- Dashboard module -->
-        <div id="id_dashboard" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('452637')=='false' && has_right('452638')=='false' && has_right('452593')=='false'}">
+        <div id="id_dashboard" class="col-md-2 col-sm-4 col-xs-6 displayme_${has_right('452637')=='false' && has_right('453483')=='false' && has_right('452638')=='false' && has_right('452593')=='false'}">
             <a href="https://live.runmyprocess.com/live/112501480325272109/appli/XXXXXX?P_mode=${P_mode}&P_language=${P_language}">
                 <div class="well col-centered ">
                 <div class="homeThumbnail">
