--- a/P_Legrand/CR Intervention/New intervention/New intervention html - Intervention.html
+++ b/P_Legrand/CR Intervention/New intervention/New intervention html - Intervention.html
@@ -1,20 +1,14 @@
-
-<!--Intervention --> -->
+<!--Intervention -->
 <div class="container-fluid">
 	<div class="row text-center">
-  		<div class = "panel panel-primary" style="margin-bottom:0px">
-    			<div class = "panel-heading">
+  		<div class="panel panel-primary" style="margin-bottom:0px">
+    			<div class="panel-heading">
     				<table width="100%">
+					  <a id ="intervention"> 
                         <tr>
                             <td width="100%" style="text-align: center">
-                                <h1 class = "panel-title"><i class="fa fa-info-circle fa-lg" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n('panel_title_global_id', 'Global Informations - GDC')}</h1>
+                                <h1 class = "panel-title"><i class="fa fa-info-circle fa-lg" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n('panel_title_global_id', 'Intervention - Engineer')}</h1>
                             </td>
-                            <td style="text-align: right">
-                                    <button id="bt_intervention_to_global" onclick="javascript:fil_ariane('global');" type="button" class="gwt-Button rmpButton " style="direction: ltr;">${i18n('buttom_back', 'Go to Global')}</button>
-                                </td>
-                            <td style="text-align: right">
-                                <button id="bt_intervention_to_issue" onclick="javascript:fil_ariane('issue');" type="button" class="gwt-Button rmpButton " style="direction: ltr;">${i18n('buttom_back', 'Go to issue')}</button>
-                            </td>>
                         </tr>
                     </table>
     			</div>
