--- a/P_Legrand/CR Intervention/Process/Process - New intervention html - Message new_request_to_country_email.html
+++ b/P_Legrand/CR Intervention/Process/Process - New intervention html - Message new_request_to_country_email.html
@@ -7,9 +7,12 @@ ${P_initiator.name} has submitted a request <strong>${request_id} - ${project_ti
 - Request Date: <strong>${submission_date}</strong>
 - Project: <strong>${project_title}</strong>
 - Legrand ref.: <strong>${legrand_ref}</strong>
+- (Priority):
+- (Type_intervention)
+- (pc_name)
+- (Afficher code nouveau PC si valeur type=PC swap)
 - Site Name: <strong>${location_site_name}</strong>
 - User: <strong>${user_name}</strong>
-- Contact email: <strong>${user_contact_email}</strong>
 - Mode: <strong>${P_mode}</strong>
 
 Please click <a href="${get_next_url(1, false)}">here</a> to access to the request form where you can plan the next intervention.
