Commit 27/11/2018 - BO Users

--- a/P_KellyDeli/AccountManagement/Account html - Modules Cards.html
+++ b/P_KellyDeli/AccountManagement/Account html - Modules Cards.html
@@ -3,7 +3,7 @@
     <div class="row row-centered">
         
         <!-- Module Gestion des Magasins -->
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 displayme_${has_right('398372')=='true' || has_right('398369')=='true'}">
             <div class="card-container">
                 <a href="https://live.runmyprocess.com/live/112501480325272109/appli/360952?P_mode=${P_mode}&P_language=${P_language}">
                     <div class="card">
@@ -40,7 +40,7 @@
                                         <h5 class="text-center">Nombre de magasins</h5>
                                         <div class="text-center">
                                             <div class="stats">
-                                                <h4 id="id_opened_locations">298</h4>
+                                                <h4 id="id_opened_locations">773</h4>
                                                 <p>Ouverts</p>
                                             </div>
                                             <div class="stats">
@@ -59,7 +59,7 @@
         </div>  <!-- end col-sm-6 col-md-4 col-lg-4 -->
 
         <!-- Module Gestion des Langues -->
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 displayme_${has_right('398372')=='true' || has_right('398369')=='true'}">
             <div class="card-container">
                 <a href="https://live.runmyprocess.com/live/112501480325272109/appli/378886?P_mode=${P_mode}&P_language=${P_language}">
                     <div class="card">
@@ -109,6 +109,58 @@
                 </a>
             </div> <!-- end card-container -->
         </div>  <!-- end col-sm-6 col-md-4 col-lg-4 -->      
+
+        <!-- Module Gestion des Utilisateurs -->
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 displayme_${has_right('443419')=='true' || has_right('398372')=='true' || has_right('398369')=='true'}">
+            <div class="card-container">
+                <a href="https://live.runmyprocess.com/live/112501480325272109/appli/397697?P_mode=${P_mode}&P_language=${P_language}">
+                    <div class="card">
+                        <div class="front">
+                            <div class="cover">
+                                <img src="https://live.runmyprocess.com/live/112501480325272109/upload/de29db80-7316-11e8-a9fb-0639651b3341/fujitsu_bkg_06.jpg">
+                            </div>
+                            <div class="module">
+                                <img class="img-circle" src="https://live.runmyprocess.com/live/112501480325272109/upload/51124180-25c7-11e7-869b-02b3a23437c9/user_management_200.png">
+                            </div>
+                            <div class="content">
+                                <div class="main">
+                                    <h3 class="name">Utilisateurs</h3>
+                                    <p class="profession">réservé aux Superviseurs</p>
+                                    <p class="text-center">Module de gestion des utilisateurs</p>
+                                </div>
+                                <div class="footer">
+                                    <i class="fa fa-mail-forward"></i>  Plus de précisions
+                                </div>
+                            </div>
+                        </div> <!-- end Front Face Card -->
+                        <div class="back">
+                            <div class="content">
+                                <div class="main">
+                                    <h4 class="title text-center">Gestion des utilisateurs</h4>
+                                    <p class="text-center">Ce module permet de gérer : 
+                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> la création d'un utilisateur
+                                        </li>
+                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> la mise à jour d'un utilisateur
+                                        </li>
+                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> la suppression d'un utilisateur
+                                        </li></p>
+                                    <div class="stats-container text-center">
+                                        <h5 class="text-center">Détails des utilisateurs</h5>
+                                        <div class="text-center">
+                                            <div class="stats">
+                                                 <h4 id="id_languages_nb">700</h4>
+                                                <p>Nombre</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- <div class="footer"></div> -->
+                        </div> <!-- end Back Face Card -->
+                    </div> <!-- end card -->
+                </a>
+            </div> <!-- end card-container -->
+        </div>  <!-- end col-sm-6 col-md-4 col-lg-4 -->   
 
     </div>  <!-- end row -->
 </div>
