--- a/P_KellyDeli/BO Users/BO Users html - Alert CW.html
+++ b/P_KellyDeli/BO Users/BO Users html - Alert CW.html
@@ -1,8 +1,7 @@
-<!-- Alerte: utilisation zone Liste Kiosks -->
-<!-- <div class="alert alert-danger col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 pull-left" role="alert"> -->
+<!-- Alert Info Import Groupé -->
 <div class="alert alert-danger pull-left" role="alert">
-	<strong>${i18n("alertInfo_txt1", "NOTE")}</strong>&nbsp; ${i18n("alertInfo_txt2", "(pour Liste Kiosks)")}
+	<strong>${i18n("alertInfoImport_txt1", "Note :")}</strong>
 	<p>
-        <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>&nbsp; ${i18n("alertInfo_txt3", "Utiliser uniquement des MAJUSCULES, tirets et chiffres. Séparer les kiosks pas une <strong>VIRGULE</strong>. PAS D'ESPACE !")}<br>
+		<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>&nbsp; ${i18n("alertInfoImpor_txt2", "L'exécution du process modifie les propriétés (Metadata) des utilisateurs. Soyez certain que vous importez dans le mode <strong>LIVE</strong> !")}.
 	</p>
 </div>
