--- a/P_Legrand/CR Intervention/BO - Homepage/BO Homepage html - Cards menu.html
+++ b/P_Legrand/CR Intervention/BO - Homepage/BO Homepage html - Cards menu.html
@@ -3,7 +3,7 @@
     <div class="row row-centered">
         
         <!-- Module Site management -->
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 displayme_${has_right('453117')=='true' || has_right('452558')=='true'}">
             <div class="card-container">
                 <a href="https://live.runmyprocess.com/live/112501480325272109/appli/395673?P_mode=${P_mode}&P_language=${P_language}">
                     <div class="card">
@@ -17,24 +17,23 @@
                             <div class="content">
                                 <div class="main">
                                     <h3 class="name">Sites Management</h3>
-                                    <p class="profession">réservé aux SDMO</p>
-                                    <p class="text-center">Module de gestion des sites</p>
+                                    <p class="profession">Restricted to PSE & SDMO</p>
                                 </div>
                                 <div class="footer">
-                                    <i class="fa fa-mail-forward"></i>  Plus de précisions
+                                    <i class="fa fa-mail-forward"></i>  More details
                                 </div>
                             </div>
                         </div> <!-- end Front Face Card -->
                         <div class="back">
                             <div class="content">
                                 <div class="main">
-                                    <h4 class="title text-center">Gestion des sites</h4>
-                                    <p class="text-center">Ce module permet de gérer : 
-                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> La création d'un site
+                                    <h4 class="title text-center">Sites management</h4>
+                                    <p class="text-center">This module allows you to : 
+                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> Create a site
                                         </li>
-                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> La mise à jour d'un site
+                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> Update a site
                                         </li>
-                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> La suppression d'un site
+                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> Delete a site
                                         </li></p>
                                 </div>
                             </div>
@@ -45,10 +44,10 @@
             </div> <!-- end card-container -->
         </div>  <!-- end col-sm-6 col-md-4 col-lg-4 -->
 
-        <!-- Module Gestion du Catalogue -->
+        <!-- Module Gestion Notifications Email -->
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
             <div class="card-container">
-                <a href="https://live.runmyprocess.com/live/112501480325272109/appli/352326?P_mode=${P_mode}&P_language=${P_language}">
+                <a href="https://live.runmyprocess.com/live/112501480325272109/appli/395863?P_mode=${P_mode}&P_language=${P_language}">
                     <div class="card">
                         <div class="front">
                             <div class="cover">
@@ -60,24 +59,57 @@
                             <div class="content">
                                 <div class="main">
                                     <h3 class="name">Notifications Management </h3>
-                                    <p class="profession">réservé aux SDMO</p>
-                                    <p class="text-center">Module de gestion des notifications</p>
+                                    <p class="profession">Restricted to PSE & SDMO</p>
                                 </div>
                                 <div class="footer">
-                                    <i class="fa fa-mail-forward"></i>  Plus de précisions
+                                    <i class="fa fa-mail-forward"></i>  More details
                                 </div>
                             </div>
                         </div> <!-- end Front Face Card -->
                         <div class="back">
                             <div class="content">
                                 <div class="main">
-                                    <h4 class="title text-center">Gestion des notifications</h4>
-                                    <p class="text-center">Ce module permet de gérer : 
-                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> Lorem ipsum
-                                        </li>
-                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> Lorem ipsum
-                                        </li>
-                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> Lorem ipsum
+                                    <h4 class="title text-center">Notifications management</h4>
+                                    <p class="text-center">This module allows you to :
+                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> Modify email notifications used in the " New intervention process"
+                                        </li></p>
+                                </div>
+                            </div>
+                            <!-- <div class="footer"></div> -->
+                        </div> <!-- end Back Face Card -->
+                    </div> <!-- end card -->
+                </a>
+            </div> <!-- end card-container -->
+        </div>  <!-- end col-sm-6 col-md-4 col-lg-4 -->
+
+        <!-- Module Gestion des utilisateurs -->
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="card-container">
+                <a href="https://live.runmyprocess.com/live/112501480325272109/appli/399198?P_mode=TEST&P_language=en">
+                    <div class="card">
+                        <div class="front">
+                            <div class="cover">
+                                <img src="https://live.runmyprocess.com/live/112501480325272109/upload/de29db80-7316-11e8-a9fb-0639651b3341/fujitsu_bkg_06.jpg">
+                            </div>
+                            <div class="module">
+                                <img class="img-circle" src="https://live.runmyprocess.com/live/112501480325272109/upload/edf66630-25c6-11e7-9176-0619bd984419/catalog_200.png">
+                            </div>
+                            <div class="content">
+                                <div class="main">
+                                    <h3 class="name">Users Management </h3>
+                                    <p class="profession">Restricted to PSE & SDMO</p>
+                                </div>
+                                <div class="footer">
+                                    <i class="fa fa-mail-forward"></i>  More details
+                                </div>
+                            </div>
+                        </div> <!-- end Front Face Card -->
+                        <div class="back">
+                            <div class="content">
+                                <div class="main">
+                                    <h4 class="title text-center">Users management</h4>
+                                    <p class="text-center">This module allows you to :
+                                        <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> Add new users in the application
                                         </li></p>
                                 </div>
                             </div>
