--- a/P_Legrand/CR Intervention/My tasks/3_MyTasks - TAB Country Desk.html
+++ b/P_Legrand/CR Intervention/My tasks/3_MyTasks - TAB Country Desk.html
@@ -1,17 +1,17 @@
-<!-- My tasks - Country Desk Tab -->
+<!-- My tasks - Country Desk - viewable by Country Desks users -->
 <div class="container-fluid no-margin my-actions">
 			
-    <div id="id_countryRow" class="row">
+    <div id="id_CDRow" class="row">
         <div class="row">
             <div class="col-sm-8 col-md-5 col-lg-4">
-                    <h4 class="title-form-1"><i class="fa fa-check-square" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n("country_text", "Request Orders from GDC")}</h4>
+                    <h4 class="title-form-1"><i class="fa fa-check-square" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n("CD_text", "All requests related to the country")}</h4>
                 </div>
             </div>
-            <div id="id_countryAlert" class="row">
+            <div id="id_CDAlert" class="row">
                 <div class="alert alert-warning pull-left" role="alert">
-                    <strong>${i18n("alert_country_id1", "Note :")}</strong> ${i18n("alert_country_id2", "As a country user, you can access to all requests related to your country.")} 
-                    <br><strong>${i18n("alert_country_id3", "REMINDER :")}</strong> ${i18n("alert_country_id4", "Once you fulfill the needed information to complete the form. By submitting the form, you plan an intervention with an engineer, who will be the next actor.")}
+                    <strong>${i18n("alert_CD_id1", "Note :")}</strong> ${i18n("alert_CD_id2", "As a Country Desk user, you can visualize all requests related to your country, unless those which are not still submitted by GDC.")} 
                 </div>
+            </div>
         </div>
     </div>
 
