--- a/P_KellyDeli/BO Users Management/BO Users Management html - id_download_csv_template.html
+++ b/P_KellyDeli/BO Users Management/BO Users Management html - id_download_csv_template.html
@@ -1,1 +1,1 @@
-id_proceed_users_change_btn
+<a href="https://live.runmyprocess.com/live/112501480325272109/upload/b57a65e0-9c4a-11e7-9c4e-0619bd984419/UserImportTemplate.csv"><i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i>&nbsp; Télécharger le template</a>
